--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -24,8 +24,11 @@ sniffio==1.3.1
 SQLAlchemy==2.0.41
 starlette==0.47.1
 sympy==1.14.0
-torch==2.7.1
-torchvision==0.22.1
 typing-inspection==0.4.1
 typing_extensions==4.14.1
 uvicorn==0.35.0
+
+# CPU-only PyTorch, соответствующие версии
+torch==2.1.0+cpu
+torchvision==0.16.0+cpu
+--extra-index-url https://download.pytorch.org/whl/cpu
